# cart_ographer

./: .gitignore  Makefile  README.md  pyproject.toml  restaurants.db
.agents/: AGENTS.md
app/: cart_ographer.py  crud.py  database.py  main.py  models.py  schemas.py  seed_data.py
app/pydantic/: location.py  restaurant.py
app/router/: restaurant.py
app/sqlalchemy/: base.py  location.py  restaurant.py  restaurantlocation.py
test/: conftest.py  test_restaurant.py  test_restaurant_delete.py  test_restaurant_get.py  test_restaurant_post.py  test_restaurant_put.py  test_root.py
tests/: conftest.py  test_restaurants.py
tui_client/: Cargo.toml
tui_client/src/: api.rs  app.rs  handlers.rs  main.rs  ui.rs
web_client/: index.html  package-lock.json  package.json
web_client/src/: App.test.tsx  App.tsx  MapView.tsx  api.ts  index.css  setupTests.ts
web_client/src/components/: ApprovalsView.tsx  AuthForms.tsx  DashboardView.tsx  FavoritesView.tsx  Header.tsx  ListView.tsx  RestaurantCard.tsx  RestaurantForm.tsx  SubmissionsView.tsx
web_client/src/hooks/: useAppState.ts
