[project]
name = "cart-ographer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length =160
indent-width = 4
extend-exclude = [
    "alembic/env.py"
]
