[project]
name = "cart_ographer"
version = "0.1.0"
description = "FastAPI backend to track restaurant information"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.3.0",
    "httpx>=0.27.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
